--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -5,8 +5,8 @@ on: [push, workflow_dispatch]
 
 #Environment variables https://docs.github.com/en/actions/learn-github-actions/environment-variables
 env:
-  RESOURCE-GROUP: rg-eshoponweb-vivek
-  LOCATION: westeurope
+  RESOURCE-GROUP: rg-eshoponweb-vivekanandan
+  LOCATION: southindia
   TEMPLATE-FILE: infra/webapp.bicep
   SUBSCRIPTION-ID: 07a644cc-bda3-403b-9418-3f2bbfe8cb65
   WEBAPP-NAME: eshoponweb-webapp-vivek
